--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ button: Busque entre mais de 40 profissionais
 lead: Encontre o melhor para o seu evento.
 ---
 
+<p class="pull-xs-right p-a-1">
+  <a href="#" class="btn btn-primary">Blog</a>
+</p>
+
 <div class="hero p-y-7 bg-cover-fixed text-primary text-xs-center">
   <p class="display-1"><span class="p-x-2 bb-2">{% include tocaki-logo.html %}</span></p>
   <p class="h3 m-b-2">{{ page.lead }}</p>
