Add artists filter

--- a/artistas.html
+++ b/artistas.html
@@ -6,9 +6,9 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        {% include filter-card.html title="Tipo"       items=site.data.types  icon="search" %}
-        {% include filter-card.html title="Localidade" items=site.data.cities icon="marker" %}
-        {% include filter-card.html title="Gênero"     items=site.genres      icon="play" %}
+        {% include filter-card.html title="Tipo"       items=site.data.types  icon="search" name="types" %}
+        {% include filter-card.html title="Localidade" items=site.data.cities icon="marker" name="cities" %}
+        {% include filter-card.html title="Gênero"     items=site.genres      icon="play"   name="genres" %}
       </div>
       <div class="col-md-8">
         <div class="row">
