--- a/artistas.html
+++ b/artistas.html
@@ -8,7 +8,7 @@ layout: default
       <div class="col-md-4">
         {% include filter-card.html title="Tipo"       items=site.data.types  icon="search" name="types" %}
         {% include filter-card.html title="Localidade" items=site.data.cities icon="marker" name="cities" %}
-        {% include filter-card.html title="Gênero"     items=site.genres      icon="play"   name="genres" %}
+        {% include filter-card.html title="Gênero"     items=site.data.genres icon="play"   name="genres" %}
       </div>
       <div class="col-md-8">
         <div class="row">
