--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-banner_button: Busque entre mais de 40 profissionais
+banner_button: Busque entre varios profissionais
 banner_lead: Encontre o melhor para o seu evento.
-about: >
-  Tocaki é uma plataforma que acredita nos artistas e
-  busca oferecer as oportunidades que eles merecem. O nosso
-  objetivo é auxiliar na divulgação dos artistas que precisam,
-  de forma moderna, funcional e inovadora!
+about: >-
+  Tocaki é uma plataforma que acredita nos artistas e busca oferecer as
+  oportunidades que eles merecem. O nosso objetivo é auxiliar na divulgação dos
+  artistas que precisam, de forma moderna, funcional e inovadora!
+published: true
 ---
 
 <p class="pull-xs-right p-a-1">
