--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-banner_button: Busque entre varios profissionais
+banner_button: Busque entre vários profissionais
 banner_lead: Encontre o melhor para o seu evento.
 about: >-
   Tocaki é uma plataforma que acredita nos artistas e busca oferecer as
