--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ published: true
 ---
 
 <p class="pull-xs-right p-a-1">
-  <a href="{{ site.blogurl }}" class="btn btn-primary">Blog</a>
+  <a href="{{ site.blogurl }}" target="_blank" class="btn btn-primary">Blog</a>
 </p>
 
 <div class="hero p-y-7 bg-cover-fixed text-primary text-xs-center">
@@ -36,7 +36,7 @@ published: true
       </div>
       <div class="col-md-6">
         <p>
-          <a href="{{ site.subscriptionurl }}" class="btn btn-block btn-info btn-lg">{% include icon.html i="music" %} Quero participar!</a>
+          <a href="{{ site.subscriptionurl }}" target="_blank" class="btn btn-block btn-info btn-lg">{% include icon.html i="music" %} Quero participar!</a>
         </p>
       </div>
     </div>
