--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@ layout: default
 banner_button: Busque entre vários profissionais
 banner_lead: Encontre o melhor para o seu evento.
 about: >-
-  Tocaki é uma plataforma que acredita nos artistas e busca oferecer as
-  oportunidades que eles merecem. O nosso objetivo é auxiliar na divulgação dos
-  artistas que precisam, de forma moderna, funcional e inovadora!
+  Tocaki é uma plataforma que acredita no artista, e queremos ajudar na sua
+  divulgação, oferecendo um perfil moderno, funcional, objetivo e inovador!
 published: true
 ---
 
