--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@ layout: default
 banner_button: Busque entre vários profissionais
 banner_lead: Encontre o melhor para o seu evento.
 about: >-
-  Tocaki é uma plataforma que acredita no artista, e queremos ajudar na sua
-  divulgação, oferecendo um perfil moderno, funcional, objetivo e inovador!
+  Tocaki é uma plataforma que acredita no artista. Com um perfil digital,
+  moderno, inovador e objetivo, ficará mais fácil divulgar seu trabalho. Por
+  apenas R$12,90 por semestre, você pode ter o seu!
 published: true
 ---
 
